# ChangeLog for app-crypt/kth-krb
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/kth-krb/Attic/ChangeLog,v 1.13 2003/10/01 09:39:25 aliz Exp $

*kth-krb-1.2.2 (05 Aug 2003)

  05 Aug 2003; Ryan Phillips <rphillips@gentoo.org> kth-krb-1.2.2.ebuild :
  Added Sascha Silbe's patch and removed old ebuilds.

*kth-krb-1.2.1 (26 Oct 2002)
  
  20 Jan 2003; Jon Nall <nall@gentoo.org> kth-krb-1.2.1.ebuild : 
  keyworded ~ppc

  06 Jan 2003; Jack Morgan <jmorgan@gentoo.org> kth-krb-1* :
  Removed sparc keywords 

  26 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> :
  Security update. Found by Ian <ian@stacken.kth.se>.

*kth-krb-1.2 (18 Oct 2002)

  18 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> kth-krb-1.2.ebuild
  Version bump, found by Ian <ian@stacken.kth.se> in #7823.

*kth-krb-1.1.1-r1 (1 Feb 2002)

  18 Aug 2002; Ryan Phillips <rphillips@gentoo.org> kth-krb-1.1.1.ebuild :

  New version.

*kth-krb-1.1-r1 (1 Feb 2002)

  18 Aug 2002; Ryan Phillips <rphillips@gentoo.org> :

  Changed emake to make due to compile issue

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.