@@ -1,7 +1,8 @@
 MD5 40c5c3794b6a5da86ddd5ae068c43582 kth-krb-1.2.ebuild 1228
-MD5 36b9a14f3d99df7eec17ccfd0669f878 kth-krb-1.2.2-r1.ebuild 1392
+MD5 485b37e1270b09772fa167e2404205dd kth-krb-1.2.2-r1.ebuild 1424
 MD5 c3279d8211021886f9136f98304ba5a1 kth-krb-1.2.2.ebuild 1233
-MD5 492e564d5717f094cc28b10faae026f1 ChangeLog 1527
+MD5 811b265c172b54417ece706408478045 ChangeLog 1699
+MD5 059733ad92a101895ce18a1120b6eb55 metadata.xml 225
 MD5 52d6c61f464a1dbbb09907a4d4a998d6 kth-krb-1.2.1.ebuild 1233
 MD5 2884941e77f936011c4c56d9af159ae6 files/digest-kth-krb-1.2 61
 MD5 38a19d9c77f2f822ae597ae120f34fc9 files/digest-kth-krb-1.2.1 63
