@@ -1,0 +1,1 @@
+MD5 e91fae1622a30a4e033092ef39c2b6b9 krb4-1.2.2.tar.gz 1876603
