@@ -1,6 +1,11 @@
 # ChangeLog for app-crypt/kth-krb
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/kth-krb/Attic/ChangeLog,v 1.13 2003/10/01 09:39:25 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/kth-krb/Attic/ChangeLog,v 1.14 2003/10/05 23:31:57 rphillips Exp $
+
+*kth-krb-1.2.2-r1 (05 Oct 2003)
+  
+  05 Oct 2003; Ryan Phillips <rphillips@gentoo.org> kth-krb-1.2.2-r1.ebuild :
+  added a kludge to fix the paths with the libraries
 
 *kth-krb-1.2.2 (05 Aug 2003)
 
